tests/expectations/compiler/mappings/unknown_external_mapping_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372005]: Unknown variable `foo`
    --> compiler-test:9:35
     |
   9 |         let a:bool = Mapping::get(registry.aleo/foo, addr);
     |                                   ^^^^^^^^^^^^^^^^^
"""]
